Reduce padding to avoid overflow on phone screen

--- a/style.css
+++ b/style.css
@@ -129,5 +129,6 @@ body{
 }
 
 .border{
-    padding: 30px;
+    padding: 5px;
+    height: 100vh;
 }
